--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,21 +5,28 @@ services:
     restart: always
     environment:
       MYSQL_DATABASE: 'animauxdb'
-      # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
-      # You can use whatever password you like
       MYSQL_PASSWORD: 'password'
-      # Password for root access
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
-      # <Port exposed> : < MySQL Port running inside container>
       - '3308:3306'
     expose:
-      # Opens port 3306 on the container
       - '3306'
-      # Where our data will be persisted
     volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
+      - my-db-1:/var/lib/mysql
+  # api:
+  #   build:
+  #     dockerfile: Dockerfile
+  #     context: .
+  #     target: development
+  #   volumes:
+  #     - .:/usr/src/app
+  #   env_file:
+  #   - .env
+  #   command: 'npm run start:dev'
+  #   ports:
+  #     - '3000:3000'
+  #   expose:
+  #     - '3000'
 volumes:
-  my-db:
+  my-db-1:
